--- a/README
+++ b/README
@@ -21,3 +21,5 @@ Specifications:
 	2. Compile the SSASM source code: cc -o ssasm ssasm.c
 	3. Copy the binary executable to the /usr/local/bin directory: sudo cp -r ssasm /usr/local/bin
 	4. Now use ssasm as a Ubuntu command. 
+
+-- Suhas H (suhas239@gmail.com)
